Add pgAdmin for PostgeSQL, change environment args

--- a/.env.dist
+++ b/.env.dist
@@ -6,6 +6,17 @@ XDEBUG_VERSION=3.3.1
 NGINX_VIRTUAL_HOST=symfony.test
 NGINX_PORT=80
 
+# pgAdmin
+PGADMIN_VIRTUAL_HOST=pgadmin.test
+PGADMIN_PORT=8888
+
+# PostgreSQL
+POSTGRES_VERSION=16
+POSTGRES_PORT=5432
+POSTGRES_DB=database
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+
 # Adminer
 ADMINER_VIRTUAL_HOST=adminer.test
 ADMINER_PORT=8080
@@ -14,21 +25,14 @@ ADMINER_PORT=8080
 MYSQL_VERSION=8.0
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=symfony
-MYSQL_USER=symfony
+MYSQL_DATABASE=database
+MYSQL_USER=username
 MYSQL_PASSWORD=password
 
 # MariaDB
 MARIADB_VERSION=11.3.2
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=root
-MARIADB_DATABASE=symfony
-MARIADB_USER=symfony
+MARIADB_DATABASE=database
+MARIADB_USER=username
 MARIADB_PASSWORD=password
-
-# PostgreSQL
-POSTGRES_VERSION=16
-POSTGRES_PORT=5432
-POSTGRES_DB=symfony
-POSTGRES_USER=symfony
-POSTGRES_PASSWORD=password
