--- a/project/.env
+++ b/project/.env
@@ -27,11 +27,11 @@ APP_SECRET=3967a08d9d4dc2abb8a0bf8294d0f522
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
 # MySQL 8.0
-# DATABASE_URL="mysql://symfony:password@db:3306/symfony?serverVersion=8.0&charset=utf8mb4"
+# DATABASE_URL="mysql://username:password@db:3306/database?serverVersion=8.0&charset=utf8mb4"
 
 # MariaDB 11.3.2
-# DATABASE_URL="mysql://symfony:password@db/symfony?serverVersion=11.3.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://username:password@db/database?serverVersion=11.3.2-MariaDB&charset=utf8mb4"
 
 # PostgreSQL 16
-DATABASE_URL="postgresql://symfony:password@db:5432/symfony?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://username:password@db:5432/database?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
