--- a/.env
+++ b/.env
@@ -6,9 +6,13 @@ XDEBUG_VERSION=3.3.1
 NGINX_VIRTUAL_HOST=symfony.test
 NGINX_PORT=80
 
+# pgAdmin
+PGADMIN_VIRTUAL_HOST=pgadmin.test
+PGADMIN_PORT=8888
+
 # PostgreSQL
 POSTGRES_VERSION=16
 POSTGRES_PORT=5432
-POSTGRES_DB=symfony
-POSTGRES_USER=symfony
+POSTGRES_DB=database
+POSTGRES_USER=username
 POSTGRES_PASSWORD=password
