--- a/project/.env
+++ b/project/.env
@@ -24,10 +24,10 @@ APP_SECRET=3967a08d9d4dc2abb8a0bf8294d0f522
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 
 # SQLite
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
 # MySQL 8.0
-DATABASE_URL="mysql://username:password@db:3306/database?serverVersion=8.0&charset=utf8mb4"
+#DATABASE_URL="mysql://username:password@db:3306/database?serverVersion=8.0&charset=utf8mb4"
 
 # MariaDB 11.3.2
 #DATABASE_URL="mysql://username:password@db/database?serverVersion=11.3.2-MariaDB&charset=utf8mb4"
